Closed
Bug 1408444
Opened 8 years ago
Closed 8 years ago
Assertion failure: !mMightHaveUnreportedJSException, at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/ErrorResult.h:486
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | wontfix |
| firefox58 | --- | fixed |
People
(Reporter: jkratzer, Assigned: bzbarsky)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(5 files)
Testcase found while fuzzing mozilla-central rev 196dadb2fe50. Reproduction requires both trigger.html and comment.html.
Flags: in-testsuite?
| Reporter | ||
Comment 1•8 years ago
|
||
| Reporter | ||
Comment 2•8 years ago
|
||
Comment 3•8 years ago
|
||
INFO: Last good revision: c777acbcd2a9f0bcf14cbb0fffcdf399d8d6c8d2
INFO: First bad revision: 867fe67b16a1227b2f4758ff69a705e43b39af10
INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=c777acbcd2a9f0bcf14cbb0fffcdf399d8d6c8d2&tochange=867fe67b16a1227b2f4758ff69a705e43b39af10
Blocks: 1393806
Has Regression Range: --- → yes
status-firefox56:
--- → unaffected
status-firefox57:
--- → fix-optional
status-firefox58:
--- → affected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(bzbarsky)
Version: unspecified → 57 Branch
| Assignee | ||
Comment 4•8 years ago
|
||
MozReview-Commit-ID: 6kx4TOao7nM
Attachment #8919984 -
Flags: review?(peterv)
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
| Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(bzbarsky)
Updated•8 years ago
|
Attachment #8919984 -
Flags: review?(peterv) → review+
Pushed by bzbarsky@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a3a95b44e309
Flag a few more ErrorResults as would-report-JS-exceptions. r=peterv
Comment 6•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Comment 7•8 years ago
|
||
Doesn't seem like a must-fix for 57. Feel free to set the status back to affected and nominate for approval if you feel strongly otherwise.
| Assignee | ||
Comment 8•8 years ago
|
||
This should not be taken in 57. It's fixing an assertion that is somewhat bogus in this case, but bogus for nonlocal reasons that it can't detect.
| Reporter | ||
Comment 9•8 years ago
|
||
I've identified a new testcase which triggers the same assertion.
| Reporter | ||
Comment 10•8 years ago
|
||
(In reply to Jason Kratzer [:jkratzer] from comment #9)
> Created attachment 8923863 [details]
> trigger2.html
>
> I've identified a new testcase which triggers the same assertion.
Tested on mozilla-central rev 083a9c84fbd0 (20171030).
Comment 11•8 years ago
|
||
Normally I'd say one issue per bug, but this newer testcase also bisects back to bug 1393806, so I guess it's another edge case related to the initial fix. Be warned that this testcase spams a LOT of new windows.
Status: RESOLVED → REOPENED
Flags: needinfo?(bzbarsky)
Flags: in-testsuite?
Flags: in-testsuite-
Resolution: FIXED → ---
Target Milestone: mozilla58 → ---
| Assignee | ||
Comment 12•8 years ago
|
||
Yes, one issue per bug. This needs to be fixed at all possible callsites that can reach the relevant code, so unless it's asserting at the exact same place (and I don't mean the assertion location, I mean the ErrorResult instantiation location), it should be a separate bug. Please file one and cc me?
Status: REOPENED → RESOLVED
Closed: 8 years ago → 8 years ago
Flags: needinfo?(bzbarsky)
Resolution: --- → FIXED
Updated•8 years ago
|
Target Milestone: --- → mozilla58
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•