Bug 1408444. Flag a few more ErrorResults as would-report-JS-exceptions. r=peterv

MozReview-Commit-ID: 6kx4TOao7nM