dom/base/nsRange.cpp
@@ -2328,6 +2328,7 @@ nsRange::CutContents(DocumentFragment** aFragment)
       {
         nsCOMPtr<nsINode> n = do_QueryInterface(commonCloneAncestor);
         n->AppendChild(*farthestAncestor, res);
+        res.WouldReportJSException();
         if (NS_WARN_IF(res.Failed())) {
           return res.StealNSResult();
         }
@@ -2340,6 +2341,7 @@ nsRange::CutContents(DocumentFragment** aFragment)
       } else {
         commonCloneAncestor->AppendChild(*nodeToResult, res);
       }
+      res.WouldReportJSException();
       if (NS_WARN_IF(res.Failed())) {
         return res.StealNSResult();
       }
